# Bitbucket-Branch-Sanitizer

./: .pre-commit-config.yaml  BitBucketBranchSanitizer.py  config.json  pyproject.toml  requirements.txt
